[tool.poetry]
name = "nepseutils"
version = "0.2.2"
description = "Collection of scripts to interact with NEPSE related websites!"
authors = ["Daze <dazehere@yandex.com>"]
repository = "https://github.com/arpandaze/nepseutils"
readme = "README.md"
keywords = ["nepse","meroshare","tms"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
tenacity = "^7.0.0"
cryptography = "^3.4.7"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.7.4"
black = "^20.8b1"
jedi = "^0.18.0"
isort = "^5.8.0"
rope = "^0.18.0"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
