[tool.poetry]
name = "nepseutils"
version = "0.4.2"
description = "Collection of scripts to interact with NEPSE related websites!"
authors = ["Daze <dazehere@yandex.com>"]
repository = "https://github.com/arpandaze/nepseutils"
readme = "README.md"
keywords = ["nepse","meroshare","tms"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
tenacity = "^8.2.2"
cryptography = "^41.0.1"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
pylint = "^2.17.4"
black = "^23.3.0"
jedi = "^0.18.2"
isort = "^5.12.0"
rope = "^1.8.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
nepseutils = "nepseutils.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
