[project]
name = "nepseutils"
version = "0.4.7"
description = "Collection of scripts to interact with NEPSE related websites!"
authors = [
    {name = "Arpan Koirala", email = "arpandaze@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["nepse", "meroshare", "tms"]
dependencies = [
    "requests>=2.31.0",
    "tenacity>=8.2.2",
    "cryptography>=41.0.1",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=7.3.2",
    "pylint>=2.17.4",
    "black>=23.3.0", 
    "jedi>=0.18.2",
    "isort>=5.12.0",
    "rope>=1.8.0",
    "flake8>=6.0.0",
]

[project.urls]
Repository = "https://github.com/arpandaze/nepseutils"

[project.scripts]
nepseutils = "nepseutils.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nepseutils"]

[tool.hatch.version]
path = "nepseutils/version.py"

[tool.pytest]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
